--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Treact</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section id="landing">
+        <nav>
+            <div class="logo">
+                <img src="./assets/logo.svg"  class="logo__img"alt="">
+                <p class="logo_desc">Treact</p>
+            </div>
+            <ul>
+                <li><a href="#About"></a>About</li>
+                <li><a href="#Blog"></a>Blog</li>
+                <li><a href="#Pricing"></a>Pricing</li>
+                <li><a href="#Contact Us"></a>Contact Us</li>
+                <li><a href="#Login"></a>Login</li>
+                <button class="btn">Sign Up</button>
+
+            </ul>
+        </nav>
+        <header>
+            <div class="header__format">
+                <h2>
+                    Beautiful React Templates <span class="purple">for you</span>
+                </h2>
+                <p>
+                    Our templates are easy to setup, undestand and customize.
+                    Fully modular components with a variety of pages and 
+                    components.
+                </p>
+                <div>
+                    <input type="email">
+                    <button>Get started</button>
+                </div>
+                <div>
+                    <h3>
+                        OUR TRUSTED CUSTOMERS
+                    </h3>
+                    <figure class="figure__1">
+                        <img src="./assets/customers-logo-strip.png"  class="img_1" alt="">
+                    </figure>
+                </div>
+            </div>
+            <figure>
+                <img src="./assets/design 1.svg" alt="">
+            </figure>
+        </header>
+    </section>
 </body>
 </html>
