--- a/index.html
+++ b/index.html
@@ -176,5 +176,33 @@
             </div>
         </div>
     </section>
+    <section id="design">
+        <div class="container">
+            <div class="row">
+                <div class="design__description">
+                  <h3>
+                    QUALITY WORK
+                  </h3>
+                  <H2>
+                    Designed and Developed by Professionals.
+                  </H2>
+
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quasi repudiandae
+                     dolore adipisci autem labore maiores tempora veniam doloribus, consectetur \
+                     quam illum soluta enim magnam. Consequatur dicta nemo dolores eum.
+                  </p>
+
+                  <button>
+                    Learn more
+                  </button>
+                </div>
+                  <div class="design__image">
+                    <img src="./assets/treact home page screen.png" class="des__image" alt="">
+                  </div>        
+             
+            </div>
+        </div>
+    </section>
 </body>
 </html>
