--- a/index.html
+++ b/index.html
@@ -179,28 +179,29 @@
     <section id="design">
         <div class="container">
             <div class="row">
-                <div class="design__description">
-                  <h3>
-                    QUALITY WORK
-                  </h3>
-                  <H2>
-                    Designed and Developed by Professionals.
-                  </H2>
+                <div class="design__and__development">
+                    <div class="design__description">
+                        <h3 class="h3__title">
+                        <span class="purple">QUALITY WORK</span> 
+                        </h3>
+                        <h2>
+                            Designed and Developed by <span class="purple">Professionals.</span>
+                        </h2>
 
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quasi repudiandae
-                     dolore adipisci autem labore maiores tempora veniam doloribus, consectetur \
-                     quam illum soluta enim magnam. Consequatur dicta nemo dolores eum.
-                  </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quasi repudiandae
+                            dolore adipisci autem labore maiores tempora veniam doloribus, consectetur \
+                            quam illum soluta enim magnam. Consequatur dicta nemo dolores eum.
+                        </p>
 
-                  <button>
-                    Learn more
-                  </button>
+                        <button>
+                            Learn more
+                        </button>
+                    </div>
+                    <div class="design__image">
+                        <img src="./assets/treact home page screen.png" class="des__image" alt="">
+                    </div>        
                 </div>
-                  <div class="design__image">
-                    <img src="./assets/treact home page screen.png" class="des__image" alt="">
-                  </div>        
-             
             </div>
         </div>
     </section>
