--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             quam illum soluta enim magnam. Consequatur dicta nemo dolores eum.
                         </p>
 
-                        <button>
+                        <button class="btn__design">
                             Learn more
                         </button>
                     </div>
@@ -205,5 +205,75 @@
             </div>
         </div>
     </section>
+    <section id="Steps">
+        <div class="container">
+            <div class="row">
+               <figure class="figure__img--wrapper">
+                <img src="./assets/get started.png" class="steps__img" alt="">
+               </figure>
+
+               <div class="steps__description">
+                        <span class="purple">STEPS</span>
+                    <h2 class="step__list--header">
+                        Easy to <span class="purple">Get Started</span>
+                    </h2>
+                    <div class="steps__lists">
+                        <div class="step">
+                            <div class="step__number--wrapper">
+                                <div class="step__number">
+                                    01
+                                </div>
+                            </div>
+                            <div class="step__description">
+                                <span class="step__title">Register</span> 
+                                <p class="step__sub--title">
+                                    Create an account with us using Google or Facebook.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="step">
+                            <div class="step__number--wrapper">
+                                <div class="step__number">
+                                    02
+                                </div>
+                            </div>
+                            <div class="step__description">
+                                <span class="step__title">Download</span> 
+                                <p class="step__sub--title">
+                                    Browse and Download the template that you like from the marketplace.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="step">
+                            <div class="step__number--wrapper">
+                                <div class="step__number">
+                                    03
+                                </div>
+                            </div>
+                            <div class="step__description">
+                                <span class="step__title">Run</span> 
+                                <p class="step__sub--title">
+                                    Follow the instructions to setup and customize the template to your needs.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+               </div>
+            </div>
+        </div>
+    </section>
+ <section id="Quality">
+   <div class="container">
+    <div class="row">
+        <span class="purple">
+            QUALITY WORK
+        </span>
+        <H2>
+            Designed & Developed by <span class="purple">Professionals.</span>
+        </H2>
+    </div>
+   </div>
+ </section>
+
 </body>
 </html>
