--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treact</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/844771a43a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="landing">
@@ -194,7 +195,7 @@
                             quam illum soluta enim magnam. Consequatur dicta nemo dolores eum.
                         </p>
 
-                        <button class="btn__design">
+                        <button class="btn__design btn--generic">
                             Learn more
                         </button>
                     </div>
@@ -264,15 +265,122 @@
     </section>
  <section id="Quality">
    <div class="container">
-    <div class="row">
-        <span class="purple">
-            QUALITY WORK
-        </span>
-        <H2>
-            Designed & Developed by <span class="purple">Professionals.</span>
-        </H2>
-    </div>
+        <div class="row">
+            <div class="values__description">
+                <div class="value__description">
+                    <span class="purple">VALUES</span>
+                    
+                    <h2>
+                        We Always Abide by Our <span class="purple">Principles.</span> 
+                    </h2>
+
+                    <p class="values__para">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi u
+                        t aliquip ex ea commodo consequat.    
+                    </p>
+                    <div class="values__showcase">
+                        <div class="value">
+                            <div class="value__top">
+                                <figure  class="value__img--wrapper">
+                                    <i class="fa-solid fa-circle-dollar"></i>
+                                </figure>
+                                <div class="value__label">
+                                    Afforable
+                                </div>
+                            </div>
+                            <div class="value__bottom">
+                                We promise to offer you the best rate we can 
+                                - at par with the industry standard.
+                            </div>
+                        </div>
+                        <div class="value">
+                            <div class="value__top">
+                                <figure class="value__img--wrapper">
+                                    <i class="fa-solid fa-circle-dollar"></i>
+                                </figure>
+                                <div class="value__label">
+                                    Professionalism
+                                </div>
+                            </div>
+                            <div class="value__bottom">
+                                We assure you that our templates
+                                are designed and created by professional designers.
+                            </div>
+                        </div>
+                    </div>
+                    <button class="values__btn btn--generic">
+                        Learn More
+                    </button>
+                </div>
+                <figure class="values__figure figure__img--wrapper">
+                    <img src="./assets/quality image.svg"  class="values__img"alt="">
+                </figure>
+
+            </div>
+
+        </div>
    </div>
+ </section>
+
+ <section id="pricing">
+    <div class="container">
+        <div class="row">
+          <div class="pricing__description">
+             <span class="purple"> PRICING</span> 
+
+             <h2>
+                Reasonable & Flexible <span class="purple">Plans.</span> 
+             </h2>
+             <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+             </p>
+           </div>
+           <div class="plans__container">
+            <div class="plan">
+                <div class="plan__card">
+                    <div class="plan__style"></div>
+                    <div class="plan__header">
+                       <span class="plan__name"> 
+                         PERSONAL</span>
+
+                         <span class="plan__price">$17.99</span>
+
+                         <span class="plan__duration">MONTHLY</span>
+                    </div>
+
+                    <div class="plan__border"></div>
+                    <div class="plan__features">
+                        <span class="plan__feature--main">
+                            For Individuals
+                        </span>
+                        <span class="plan__feature">
+                            30 Templates
+                        </span>
+                        <span class="plan__feature">
+                            7 Landing Pages
+                        </span>
+                        <span class="plan__feature">
+                           12 Internal Pages
+                        </span>
+                        <span class="plan__feature">
+                            Basic Assistance
+                        </span>
+                    </div>
+                    <div class="plan__border"></div>
+                    <div class="plan__action">
+                       <button class="plan__action--btn">BUY NOW</button>
+                    </div>
+                </div>
+
+            </div>
+           </div>
+        </div>
+    </div>
+
  </section>
 
 </body>
