--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#Pricing"></a>Pricing</li>
                     <li><a href="#Contact Us"></a>Contact Us</li>
                     <li><a href="#Login"></a>Login</li>
-                    <li><a href="#Sign Up"></a>Sign Up</li>
+                    <li class="signup__btn" ><a href="#Sign Up"></a> Sign Up</li>
                     <!-- <button class="btn">Sign Up</button> -->
 
                 </ul>
@@ -329,12 +329,12 @@
     <div class="container">
         <div class="row">
           <div class="pricing__description">
-             <span class="purple"> PRICING</span> 
+             <span class="purple pricing__title"> PRICING</span> 
 
-             <h2>
+             <h2 class="pricing__subtitle">
                 Reasonable & Flexible <span class="purple">Plans.</span> 
              </h2>
-             <p>
+             <p class="price__para">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </p>
@@ -377,11 +377,202 @@
                 </div>
 
             </div>
+            <div class="plan">
+                <div class="plan__card plan__card--2">
+                    <div class="plan__style plan__style--2"></div>
+                    <div class="plan__header">
+                       <span class="plan__name plan__name--2"> 
+                         BUSINESS</span>
+
+                         <span class="plan__price plan__price--2">$37.99</span>
+
+                         <span class="plan__duration plan__duration--2">MONTHLY</span>
+                    </div>
+
+                    <div class="plan__border"></div>
+                    <div class="plan__features">
+                        <span class="plan__feature--main plan__feature--main2">
+                            For Small Businesses
+                        </span>
+                        <span class="plan__feature plan__feature--2">
+                            60 Templates
+                        </span>
+                        <span class="plan__feature plan__feature--2">
+                            15 Landing Pages
+                        </span>
+                        <span class="plan__feature plan__feature--2">
+                           22 Internal Pages
+                        </span>
+                        <span class="plan__feature plan__feature--2">
+                            Priority Assistance
+                        </span>
+                    </div>
+                    <div class="plan__border"></div>
+                    <div class="plan__action">
+                       <button class="plan__action--btn plan__action--btn2">BUY NOW</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="plan">
+                <div class="plan__card plan__card--3">
+                    <div class="plan__style plan__style--3"></div>
+                    <div class="plan__header">
+                       <span class="plan__name"> 
+                         ENTERRISE</span>
+
+                         <span class="plan__price">$57.99</span>
+
+                         <span class="plan__duration">MONTHLY</span>
+                    </div>
+
+                    <div class="plan__border"></div>
+                    <div class="plan__features">
+                        <span class="plan__feature--main">
+                            For Large Companies
+                        </span>
+                        <span class="plan__feature">
+                            90 Templates
+                        </span>
+                        <span class="plan__feature">
+                            27 Landing Pages
+                        </span>
+                        <span class="plan__feature">
+                           37 Internal Pages
+                        </span>
+                        <span class="plan__feature">
+                            Personal Assistance
+                        </span>
+                    </div>
+                    <div class="plan__border"></div>
+                    <div class="plan__action">
+                       <button class="plan__action--btn plan__action--btn3">BUY NOW</button>
+                    </div>
+                </div>
+
+            </div>
            </div>
         </div>
     </div>
 
  </section>
-
+ <footer>
+    <div class="container">
+        <div class="row">
+            <div class="footer__columns">
+                <div class="footer__column">
+                    <div class="footer__column--heading">
+                        MAIN
+                    </div>
+                    <div class="footer__column--links">
+                       <span class="footer__column--link">
+                        Blog
+                       </span> 
+                       <span class="footer__column--link">
+                        FAQs
+                       </span> 
+                       <span class="footer__column--link">
+                        Support
+                       </span> 
+                       <span class="footer__column--link">
+                        About Us
+                       </span> 
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column--heading">
+                        PRODUCT
+                    </div>
+                    <div class="footer__column--links">
+                       <span class="footer__column--link">
+                        Log In
+                       </span> 
+                       <span class="footer__column--link">
+                        Personal
+                       </span> 
+                       <span class="footer__column--link">
+                        Business
+                       </span> 
+                       <span class="footer__column--link">
+                        Team
+                       </span> 
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column--heading">
+                        PRESS
+                    </div>
+                    <div class="footer__column--links">
+                       <span class="footer__column--link">
+                        Logos
+                       </span> 
+                       <span class="footer__column--link">
+                        Events
+                       </span> 
+                       <span class="footer__column--link">
+                        Stories
+                       </span> 
+                       <span class="footer__column--link">
+                        Office
+                       </span> 
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column--heading">
+                        TEAM
+                    </div>
+                    <div class="footer__column--links">
+                       <span class="footer__column--link">
+                        Career
+                       </span> 
+                       <span class="footer__column--link">
+                        Founders
+                       </span> 
+                       <span class="footer__column--link">
+                        Culture
+                       </span> 
+                       <span class="footer__column--link">
+                        Onboarding
+                       </span> 
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column--heading">
+                        LEGAL
+                    </div>
+                    <div class="footer__column--links">
+                       <span class="footer__column--link">
+                        GDPR
+                       </span> 
+                       <span class="footer__column--link">
+                        Privacy Policy
+                       </span> 
+                       <span class="footer__column--link">
+                        Terms of Service
+                       </span> 
+                       <span class="footer__column--link">
+                        Disclaimer
+                       </span> 
+                    </div>
+                </div>
+            </div>
+            <div class="footer__border"></div>
+            <div class="footer__design">
+                <div class="footer__socials">
+                    <div class="footer__socials--logo">
+                        <img src="./assets/logo.svg "  class="footer__social--imglogo"alt="">
+                        <h3>Treact</h3>
+                    </div>
+                    <p class="footer__copyright">&COPY; 2022 Treact Inc . All rights Reserved.</p>
+                </div>
+                <div class="footer__social--list"> 
+                    <i class="fa-brands fa-facebook footer__social--img"></i>
+                    <i class="fa-brands fa-twitter footer__social--img"></i>
+                    <i class="fa-brands fa-youtube footer__social--img"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+ </footer>
 </body>
 </html>
